# set-matching-pytorch

./: .gitignore  LICENSE  README.md  eval.py  make_iqon_dataset.py  pyproject.toml  train.py
conf/: config.yaml
conf/model/: set_matching.yaml  set_prediction.yaml  set_transformer.yaml
set_matching/: extensions.py  losses.py  metrics.py
set_matching/datasets/: helper.py  iqon3000_dataset.py  popone_dataset.py  shift15m_dataset.py  split_dataset.py  transforms.py
set_matching/models/: cnn.py  modules.py  set_matching.py  set_prediction.py  set_transformer.py  set_vae.py
tests/: test_losses.py
tests/datasets/: conftest.py  test_iqon3000_dataset.py  test_popone_dataset.py  test_shift15m_dataset.py  test_split_dataset.py  test_transformers.py
tests/models/: test_modules.py  test_set_matching.py  test_set_prediction.py  test_set_transformer.py  test_set_vae.py
